--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <style>
             body{
-                background-image: url('/images/712437.jpg');
+                background-color: #ffc7c4;
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: 100% 100%;
@@ -18,7 +18,7 @@
 </head>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Project A</a>
+        <a class="navbar-brand" href="#">comma.ai</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,10 +29,10 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="data/create">Create new item</a>
+                    <a class="nav-link" href="data/create">Create Bill</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="data/list">List product</a>
+                    <a class="nav-link" href="data/list">List Bills</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
