--- a/views/list.hbs
+++ b/views/list.hbs
@@ -45,8 +45,8 @@
                     <th scope="col">Name</th>
                     <th scope="col">Price</th>
                     <th scope="col">Amount</th>
-                    <th scope="col">Made in</th>
-                    <th scope="col">Time add</th>
+                    <th scope="col">Origin</th>
+                    <th scope="col">Time</th>
                     <th scope="col">Option</th>
                 </tr>
             </thead>
