--- a/views/create.hbs
+++ b/views/create.hbs
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add new product page</title>
+    <title>comma.ai Ordered Bill</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
-<body background="/images/hallway-matrix-background-vector.jpg">
+<body style='background-color: #c4dfff'>
     <div class="container" style="background-color: bisque;">
         <div class="mt-4">
             <h1 style="text-align: center;">Create new item</h1>
@@ -52,6 +52,7 @@
                 <a href="/" class="btn btn-warning">Cancel</a>
                 <button type="submit" class="btn btn-primary">Create</button>
             </div>
+            <br>
         </form>
     </div>
 
