--- a/views/create.hbs
+++ b/views/create.hbs
@@ -12,7 +12,7 @@
 <body style='background-color: #c4dfff'>
     <div class="container" style="background-color: bisque;">
         <div class="mt-4">
-            <h1 style="text-align: center;">Create new item</h1>
+            <h1 style="text-align: center;">Create New Bill</h1>
         </div>
         <form action="/data" method="POST" enctype="multipart/form-data">
             <div class="form-group">
