change of plans

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,9 +34,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="data/list">List Bills</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
             </ul>
         </div>
     </nav>
@@ -54,7 +51,7 @@
                     <p class="card-text">{{this.description}}</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">{{this.price}} $</li>
+                    <li class="list-group-item">$ {{this.price}}</li>
                     <li class="list-group-item">Made in: {{this.made}}</li>
                     <li class="list-group-item">Amount: {{this.amount}}</li>
                 </ul>
