--- a/views/create.hbs
+++ b/views/create.hbs
@@ -31,12 +31,12 @@
             </div>
 
             <div class="form-group">
-                <label for="made">Made in</label>
+                <label for="made">Origin</label>
                 <select country class="form-control" name="made">
                     <option>Viet Nam</option>
-                    <option>China</option>
+                    <option>Sweden</option>
                     <option>USA</option>
-                    <option>Thailand</option>
+                    <option>Japan</option>
                     <option>Other...</option>
                 </select>
             </div>
